2012-06-07  Konrad Piascik  <kpiascik@rim.com>

        Add Konrad Piascik to committers.py
        https://bugs.webkit.org/show_bug.cgi?id=88560

        Unreviewed.

        * Scripts/webkitpy/common/config/committers.py:

2012-06-07  Tony Chang  <tony@chromium.org>

        [chromium] Win mock scrollbars appear to overflow by a pixel to the right and bottom
        https://bugs.webkit.org/show_bug.cgi?id=77368

        Reviewed by Ojan Vafai.

        It doesn't look like we ever get a rect with width or height of 0.
        I ran css1, css2.1, fast/forms, and tables without any crashes.

        * DumpRenderTree/chromium/WebThemeEngineDRTWin.cpp:
        (webRectToSkIRect): Correctly convert a WebRect to a SkIRect.

2012-06-07  Dirk Pranke  <dpranke@chromium.org>

        run-webkit-tests --lint-test-files gives an error when run on linux
        https://bugs.webkit.org/show_bug.cgi?id=88551

        Reviewed by Ojan Vafai.

        We weren't mapping the expectations properly for the
        google-chrome ports.

        * Scripts/webkitpy/layout_tests/port/base.py:
        (Port.path_to_test_expectations_file):
        * Scripts/webkitpy/layout_tests/port/google_chrome_unittest.py:
        (TestGoogleChromePort.test_path_to_expectations):

2012-06-07  Daniel Erat  <derat@chromium.org>

        [chromium] Add LayoutTestController::setTextSubpixelPositioning() for Linux.
        https://bugs.webkit.org/show_bug.cgi?id=88263

        Reviewed by Tony Chang.

        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        (LayoutTestController::reset):
        (LayoutTestController::setTextSubpixelPositioning):
        * DumpRenderTree/chromium/LayoutTestController.h:
        (LayoutTestController):
        * DumpRenderTree/chromium/fonts.conf:

2012-06-07  Zan Dobersek  <zandobersek@gmail.com>

        [Gtk] Assertions in gtk_widget_draw when acquiring pixel output