@@ -1,3 +1,14 @@
+2012-06-07  Ojan Vafai  <ojan@chromium.org>
+
+        Fix recent null pointer error regression in the flakiness dashboard
+        https://bugs.webkit.org/show_bug.cgi?id=88573
+
+        Reviewed by Dirk Pranke.
+
+        * TestResultServer/static-dashboards/builders.js:
+        (requestBuilderList):
+        * TestResultServer/static-dashboards/flakiness_dashboard_unittests.js:
+
 2012-06-07  Konrad Piascik  <kpiascik@rim.com>
 
         Add Konrad Piascik to committers.py
